# cabal-configure-pwd-issue-repro

./: cabal-configure-pwd-issue-repro.cabal  configure.ac
